src/optimizer/core/src/snapshots/qwik_core__test__example_5.snap
---
source: src/optimizer/core/src/test.rs
expression: output

---
==INPUT==


export const Header = qComponent({
    onRender: qHook(() => {
        return (
            <>
                <div onClick={qHook((ctx) => console.log("1"))}/>
                <div onClick={qHook((ctx) => console.log("2"))}/>
            </>
        );
    })
});
    
============================= test.tsx ==

export const Header = /*#__PURE__*/ qComponent({
    onRender: qHook(()=>import("./h_test_header_onrender")
    , "Header_onRender")
});

============================= h_test_header_onrender_div_onclick.tsx (ENTRY POINT)==

export const Header_onRender_div_onClick = /*#__PURE__*/ qHook((ctx)=>console.log("1")
);

============================= h_test_header_onrender_div_onclick2.tsx (ENTRY POINT)==

export const Header_onRender_div_onClick2 = /*#__PURE__*/ qHook((ctx)=>console.log("2")
);

============================= h_test_header_onrender.tsx (ENTRY POINT)==

export const Header_onRender = /*#__PURE__*/ qHook(()=>{
    return (<>

                <div onClick={qHook(()=>import("./h_test_header_onrender_div_onclick")
    , "Header_onRender_div_onClick")}/>

                <div onClick={qHook(()=>import("./h_test_header_onrender_div_onclick2")
    , "Header_onRender_div_onClick2")}/>

            </>);
});

== HOOKS ==

[
  {
    "origin": "test.tsx",
    "name": "Header_onRender_div_onClick",
    "entry": null,
    "canonicalFilename": "h_test_header_onrender_div_onclick",
    "localDecl": [
      "ctx"
    ],
    "localIdents": [
      "console",
      "ctx",
      "qHook"
    ]
  },
  {
    "origin": "test.tsx",
    "name": "Header_onRender_div_onClick2",
    "entry": null,
    "canonicalFilename": "h_test_header_onrender_div_onclick2",
    "localDecl": [
      "ctx"
    ],
    "localIdents": [
      "console",
      "ctx",
      "qHook"
    ]
  },
  {
    "origin": "test.tsx",
    "name": "Header_onRender",
    "entry": null,
    "canonicalFilename": "h_test_header_onrender",
    "localDecl": [],
    "localIdents": [
      "qHook"
    ]
  }
]

== DIAGNOSTICS ==

[]
