src/optimizer/core/src/snapshots/qwik_core__test__example_6-2.snap
---
source: src/test.rs
expression: "if let Some(map) = s.map { map } else { \"\".to_string() }"

---
{"version":3,"sources":["test.tsx"],"names":[],"mappings":"AACA,MAAM,GAAE,KAAK,QAAO,CAAiB;iCAKvB,KAAK,KAAO,CAAC;IACrB,MAAM,GACH,GAAG,CAAC,OAAO;AAEhB,CAAC;6CAFiB,KAAK,EAAE,GAAG,GAAK,OAAO,CAAC,GAAG,CAAC,GAAG;;gCAHrC,KAAK,KAAO,CAAC;IAAC,OAAO,CAAC,GAAG,CAAC,CAAO;AAAE,CAAC;AADnD,KAAK,CAAC,MAAM,GAAG,UAAU,CAAC,CAAC;IACvB,CAAS;IACT,QAAQ;AAKV,CAAC;8BAGW,KAAK,KAAO,CAAC;IACnB,MAAM,GACL,MAAM;AAEX,CAAC;AALL,KAAK,CAAC,GAAG,GAAG,UAAU,CAAC,CAAC;IACpB,QAAQ;AAKZ,CAAC"}
