src/optimizer/core/src/snapshots/qwik_core__test__example_6.snap
---
source: src/test.rs
expression: output

---
==INPUT==


export const sym1 = qHook((ctx) => console.log("1"));
    
============================= /user/qwik/src/test.tsx==

export const sym1 = qHook("h_test_sym1#sym1");

============================= /user/qwik/src/h_test_sym1.tsx==

export const sym1 = qHook((ctx)=>console.log("1")
);

== HOOKS ==

[
  {
    "origin": "test.tsx",
    "name": "sym1",
    "entry": null,
    "canonical_filename": "h_test_sym1",
    "local_decl": [
      "ctx"
    ],
    "local_idents": [
      "console",
      "ctx",
      "log",
      "qHook"
    ]
  }
]

== DIAGNOSTICS ==

[]
