src/optimizer/core/src/snapshots/qwik_core__test__example_7.snap
---
source: src/optimizer/core/src/test.rs
expression: output
---
==INPUT==


import { $, component$ } from '@builder.io/qwik';

export const Header = component$(() => {
    console.log("mount");
    return (
        <div onClick={$((ctx) => console.log(ctx))}/>
    );
  });

const App = component$(() => {
    return (
        <Header/>
    );
});

============================= test.tsx ==

import * as qwik from "@builder.io/qwik";
import { componentQrl } from "@builder.io/qwik";
export const Header = /*#__PURE__*/ componentQrl(qwik.qrl(()=>import("./h_test_header_component")
, "Header_component"));
/*#__PURE__*/ componentQrl(qwik.qrl(()=>import("./h_test_app_component")
, "App_component"));

============================= h_test_header_component_div_onclick.tsx (ENTRY POINT)==

import * as qwik from "@builder.io/qwik";
export const Header_component_div_onClick = (ctx)=>console.log(ctx)
;

/*
{
  "origin": "test.tsx",
  "name": "Header_component_div_onClick",
  "entry": null,
  "canonicalFilename": "h_test_header_component_div_onclick",
  "extension": "tsx"
}
*/
============================= h_test_header_component.tsx (ENTRY POINT)==

import * as qwik from "@builder.io/qwik";
export const Header_component = ()=>{
    console.log("mount");
    return <div onClick={qwik.qrl(()=>import("./h_test_header_component_div_onclick")
    , "Header_component_div_onClick")}/>;
};

/*
{
  "origin": "test.tsx",
  "name": "Header_component",
  "entry": null,
  "canonicalFilename": "h_test_header_component",
  "extension": "tsx"
}
*/
============================= h_test_app_component.tsx (ENTRY POINT)==

import * as qwik from "@builder.io/qwik";
import { Header } from "./test";
export const App_component = ()=>{
    return <Header />;
};

/*
{
  "origin": "test.tsx",
  "name": "App_component",
  "entry": null,
  "canonicalFilename": "h_test_app_component",
  "extension": "tsx"
}
*/
== DIAGNOSTICS ==

[]
