src/optimizer/core/src/snapshots/qwik_core__test__example_8.snap
---
source: src/test.rs
expression: output

---
==INPUT==


import {qHook} from '@builderio/qwik';

const Header = qComponent({
    onRender: qHook((hola) => {
      const hola = this;
      const {something, styff} = hola;
      const hello = hola.nothere.stuff[global];
      return (
        <Header/>
      );
    })
  });

=============================: test.tsx==

import { qHook } from '@builderio/qwik';
const Header = qComponent({
    onRender: qHook("h_test.tsx.js#Header_onRender_h")
});

=============================: h_test.tsx.js==

import { qHook as qHook } from "@builderio/qwik";
export const Header_onRender_h = qHook((hola)=>{
    const hola = this;
    const { something , styff  } = hola;
    const hello = hola.nothere.stuff[global];
    return (<Header />);
});

== HOOKS ==

[
  {
    "name": "Header_onRender_h",
    "local_decl": [
      "hola"
    ],
    "local_idents": [
      "qHook"
    ]
  }
]

== DIAGNOSTICS ==

None
