src/optimizer/core/src/snapshots/qwik_core__test__example_9.snap
---
source: src/test.rs
expression: output

---
==INPUT==


const Header = qHook((decl1, {decl2}, [decl3]) => {
    const {decl4, key: decl5} = this;
    let [decl6, ...decl7] = stuff;
    const decl8 = 1, decl9;
    function decl10(decl11, {decl12}, [decl13]) {}
    class decl14 {
        method(decl15, {decl16}, [decl17]) {}
    }
    try{}catch(decl18){}
    try{}catch({decl19}){}
});
    

== CODE ==

export const Header_h = qHook((decl1, { decl2  }, [decl3])=>{
    const { decl4 , key: decl5  } = this;
    let [decl6, ...decl7] = stuff;
    const decl8 = 1, decl9;
    function decl10(decl11, { decl12  }, [decl13]) {
    }
    class decl14 {
        method(decl15, { decl16  }, [decl17]) {
        }
    }
    try {
    } catch (decl18) {
    }
    try {
    } catch ({ decl19  }) {
    }
});
const Header = qHook("Header_h");


== MAP ==

{"version":3,"sources":["test.tsx"],"names":[],"mappings":"wBACe,KAAK,EAAE,KAAK,EAAE,CAAC,CAAA,KAAK,EAAA,CAAC,GAAG,KAAK,IAAM,CAAC;IAC/C,KAAK,CAAC,CAAC,CAAA,KAAK,GAAE,GAAG,EAAE,KAAK,EAAA,CAAC,GAAG,IAAI;IAChC,GAAG,EAAE,KAAK,KAAK,KAAK,IAAI,KAAK;IAC7B,KAAK,CAAC,KAAK,GAAG,CAAC,EAAE,KAAK;aACb,MAAM,CAAC,MAAM,EAAE,CAAC,CAAA,MAAM,EAAA,CAAC,GAAG,MAAM,GAAG,CAAC;IAAA,CAAC;UACxC,MAAM;QACR,MAAM,CAAC,MAAM,EAAE,CAAC,CAAA,MAAM,EAAA,CAAC,GAAG,MAAM,GAAG,CAAC;QAAA,CAAC;;IAEzC,GAAG,CAAA,CAAC;IAAA,CAAC,CAAA,KAAK,EAAC,MAAM,EAAC,CAAC;IAAA,CAAC;IACpB,GAAG,CAAA,CAAC;IAAA,CAAC,CAAA,KAAK,EAAC,CAAC,CAAA,MAAM,EAAA,CAAC,EAAC,CAAC;IAAA,CAAC;AAC1B,CAAC;MAVK,MAAM"}

== HOOKS ==

[
  {
    "name": "Header_h",
    "local_decl": [
      "decl1",
      "decl10",
      "decl11",
      "decl12",
      "decl13",
      "decl14",
      "decl15",
      "decl16",
      "decl17",
      "decl18",
      "decl19",
      "decl2",
      "decl3",
      "decl4",
      "decl5",
      "decl6",
      "decl7",
      "decl8",
      "decl9"
    ],
    "local_idents": [
      "decl1",
      "decl10",
      "decl11",
      "decl12",
      "decl13",
      "decl14",
      "decl15",
      "decl16",
      "decl17",
      "decl18",
      "decl19",
      "decl2",
      "decl3",
      "decl4",
      "decl5",
      "decl6",
      "decl7",
      "decl8",
      "decl9",
      "key",
      "method",
      "qHook",
      "stuff"
    ]
  }
]

== DIAGNOSTICS ==

None
