src/optimizer/core/src/snapshots/qwik_core__test__example_capture_imports.snap
---
source: src/optimizer/core/src/test.rs
expression: output
---
==INPUT==


import { component$, useStyles$ } from '@builder.io/qwik';
import css1 from './global.css';
import css2 from './style.css';
import css3 from './style.css';

export const App = component$(() => {
    useStyles$(`${css1}${css2}`);
    useStyles$(css3);
})

============================= test.js ==

import * as qwik from "@builder.io/qwik";
import { componentQrl } from "@builder.io/qwik";
export const App = /*#__PURE__*/ componentQrl(qwik.qrl(()=>import("./h_test_app_component")
, "App_component"));

============================= h_test_app_component_usestyles.js (ENTRY POINT)==

import * as qwik from "@builder.io/qwik";
import css1 from "./global.css";
import css2 from "./style.css";
export const App_component_useStyles = `${css1}${css2}`;

/*
{
  "origin": "test.tsx",
  "name": "App_component_useStyles",
  "entry": null,
  "canonicalFilename": "h_test_app_component_usestyles",
  "extension": "js",
  "parent": "App_component",
  "ctxKind": "function",
  "ctxName": "useStyles$",
  "captures": false
}
*/
============================= h_test_app_component_usestyles2.js (ENTRY POINT)==

import * as qwik from "@builder.io/qwik";
import css3 from "./style.css";
export const App_component_useStyles2 = css3;

/*
{
  "origin": "test.tsx",
  "name": "App_component_useStyles2",
  "entry": null,
  "canonicalFilename": "h_test_app_component_usestyles2",
  "extension": "js",
  "parent": "App_component",
  "ctxKind": "function",
  "ctxName": "useStyles$",
  "captures": false
}
*/
============================= h_test_app_component.js (ENTRY POINT)==

import * as qwik from "@builder.io/qwik";
import { useStylesQrl } from "@builder.io/qwik";
export const App_component = ()=>{
    useStylesQrl(qwik.qrl(()=>import("./h_test_app_component_usestyles")
    , "App_component_useStyles"));
    useStylesQrl(qwik.qrl(()=>import("./h_test_app_component_usestyles2")
    , "App_component_useStyles2"));
};

/*
{
  "origin": "test.tsx",
  "name": "App_component",
  "entry": null,
  "canonicalFilename": "h_test_app_component",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false
}
*/
== DIAGNOSTICS ==

[]
