src/optimizer/core/src/snapshots/qwik_core__test__example_capturing_fn_class.snap
---
source: src/optimizer/core/src/test.rs
expression: output

---
==INPUT==


import { qHook, qComponent, h, onRender } from '@builder.io/qwik';

export const App = qComponent(() => {
    function hola() {
      console.log('hola');
    }
    class Thing {}
    class Other {}

    return onRender(() => {
      hola();
      new Thing();
      return (
          <div></div>
      )
    });
  })
    
============================= test.js ==

import * as __qwik__ from "@builder.io/qwik";
import { qComponent } from '@builder.io/qwik';
export const App = /*#__PURE__*/ qComponent(__qwik__.qrl(()=>import("./h_test_app_init")
, "App_init"));

============================= h_test_app_onrender.js (ENTRY POINT)==

import * as __qwik__ from "@builder.io/qwik";
export const App_onRender = ()=>{
    hola();
    new Thing();
    return(/*#__PURE__*/ h("div", null));
};

============================= h_test_app_init.js (ENTRY POINT)==

import * as __qwik__ from "@builder.io/qwik";
import { onRender } from "@builder.io/qwik";
export const App_init = ()=>{
    function hola() {
        console.log('hola');
    }
    class Thing {
    }
    class Other {
    }
    return onRender(__qwik__.qrl(()=>import("./h_test_app_onrender")
    , "App_onRender"));
};

== HOOKS ==

[
  {
    "origin": "test.tsx",
    "name": "App_onRender",
    "entry": null,
    "canonicalFilename": "h_test_app_onrender"
  },
  {
    "origin": "test.tsx",
    "name": "App_init",
    "entry": null,
    "canonicalFilename": "h_test_app_init"
  }
]

== DIAGNOSTICS ==

[Diagnostic { message: "Identifier can not capture because it's a function: Thing", code_highlights: None, hints: None, show_environment: false, severity: Error, documentation_url: None }, Diagnostic { message: "Identifier can not capture because it's a function: hola", code_highlights: None, hints: None, show_environment: false, severity: Error, documentation_url: None }]
