src/optimizer/core/src/snapshots/qwik_core__test__example_custom_inlined_functions.snap
---
source: src/optimizer/core/src/test.rs
expression: output
---
==INPUT==


import { component$, $, useStore, wrap, useEffect } from '@builder.io/qwik';

export const useMemo = (qrt) => {
    useEffect(qrt);
};

export const useMemo$ = wrap(useMemo);

export const App = component$((props) => {
    const state = useStore({count: 0});
    useMemo$(() => {
        console.log(state.count);
    });
    return $(() => (
        <div>{state.count}</div>
    ));
});

export const Lightweight = (props) => {
    useMemo$(() => {
        console.log(state.count);
    });
});

============================= test.js ==

import * as qwik from "@builder.io/qwik";
import { componentQrl } from "@builder.io/qwik";
import { wrap, useEffect } from '@builder.io/qwik';
export const useMemo = (qrt)=>{
    useEffect(qrt);
};
export const useMemo$ = wrap(useMemo);
export const App = /*#__PURE__*/ componentQrl(qwik.qrl(()=>import("./h_test_app_component")
, "App_component"));
export const Lightweight = (props)=>{
    useMemo(qwik.qrl(()=>import("./h_test_lightweight_usememo")
    , "Lightweight_useMemo"));
};

============================= h_test_app_component_usememo.js (ENTRY POINT)==

import * as qwik from "@builder.io/qwik";
export const App_component_useMemo = ()=>{
    const [state] = qwik.useLexicalScope();
    console.log(state.count);
};

/*
{
  "origin": "test.tsx",
  "name": "App_component_useMemo",
  "entry": null,
  "canonicalFilename": "h_test_app_component_usememo",
  "extension": "js"
}
*/
============================= h_test_app_component2.js (ENTRY POINT)==

import * as qwik from "@builder.io/qwik";
import { jsx as _jsx } from "@builder.io/qwik/jsx-runtime";
export const App_component2 = ()=>{
    const [state] = qwik.useLexicalScope();
    return /*#__PURE__*/ _jsx("div", {
        children: state.count
    });
};

/*
{
  "origin": "test.tsx",
  "name": "App_component2",
  "entry": null,
  "canonicalFilename": "h_test_app_component2",
  "extension": "js"
}
*/
============================= h_test_app_component.js (ENTRY POINT)==

import * as qwik from "@builder.io/qwik";
import { useMemo } from "./test";
import { useStore } from "@builder.io/qwik";
export const App_component = (props)=>{
    const state = useStore({
        count: 0
    });
    useMemo(qwik.qrl(()=>import("./h_test_app_component_usememo")
    , "App_component_useMemo", [
        state
    ]));
    return qwik.qrl(()=>import("./h_test_app_component2")
    , "App_component2", [
        state
    ]);
};

/*
{
  "origin": "test.tsx",
  "name": "App_component",
  "entry": null,
  "canonicalFilename": "h_test_app_component",
  "extension": "js"
}
*/
============================= h_test_lightweight_usememo.js (ENTRY POINT)==

import * as qwik from "@builder.io/qwik";
export const Lightweight_useMemo = ()=>{
    console.log(state.count);
};

/*
{
  "origin": "test.tsx",
  "name": "Lightweight_useMemo",
  "entry": null,
  "canonicalFilename": "h_test_lightweight_usememo",
  "extension": "js"
}
*/
== DIAGNOSTICS ==

[]
