src/optimizer/core/src/snapshots/qwik_core__test__example_explicit_ext_no_transpile.snap
---
source: src/optimizer/core/src/test.rs
expression: output
---
==INPUT==


import { component$, $, useStyles$ } from '@builder.io/qwik';

export const App = component$((props) => {
    useStyles$('hola');
    return $(() => (
        <div></div>
    ));
});

============================= test.tsx ==

import * as qwik from "@builder.io/qwik";
import { componentQrl } from "@builder.io/qwik";
export const App = /*#__PURE__*/ componentQrl(qwik.qrl(()=>import("./h_test_app_component.tsx")
, "App_component"));

============================= h_test_app_component_usestyles.tsx (ENTRY POINT)==

import * as qwik from "@builder.io/qwik";
export const App_component_useStyles = 'hola';

/*
{
  "origin": "test.tsx",
  "name": "App_component_useStyles",
  "entry": null,
  "canonicalFilename": "h_test_app_component_usestyles",
  "extension": "tsx"
}
*/
============================= h_test_app_component2.tsx (ENTRY POINT)==

import * as qwik from "@builder.io/qwik";
export const App_component2 = ()=><div ></div>
;

/*
{
  "origin": "test.tsx",
  "name": "App_component2",
  "entry": null,
  "canonicalFilename": "h_test_app_component2",
  "extension": "tsx"
}
*/
============================= h_test_app_component.tsx (ENTRY POINT)==

import * as qwik from "@builder.io/qwik";
import { useStylesQrl } from "@builder.io/qwik";
export const App_component = (props)=>{
    useStylesQrl(qwik.qrl(()=>import("./h_test_app_component_usestyles.tsx")
    , "App_component_useStyles"));
    return qwik.qrl(()=>import("./h_test_app_component2.tsx")
    , "App_component2");
};

/*
{
  "origin": "test.tsx",
  "name": "App_component",
  "entry": null,
  "canonicalFilename": "h_test_app_component",
  "extension": "tsx"
}
*/
== DIAGNOSTICS ==

[]
