src/optimizer/core/src/snapshots/qwik_core__test__example_explicit_ext_transpile.snap
---
source: src/optimizer/core/src/test.rs
expression: output
---
==INPUT==


import { component$, $, useStyles$ } from '@builder.io/qwik';

export const App = component$((props) => {
    useStyles$('hola');
    return $(() => (
        <div></div>
    ));
});

============================= test.js ==

import * as qwik from "@builder.io/qwik";
import { componentQrl } from "@builder.io/qwik";
export const App = /*#__PURE__*/ componentQrl(qwik.qrl(()=>import("./h_test_app_component.js")
, "App_component"));

============================= h_test_app_component_usestyles.js (ENTRY POINT)==

import * as qwik from "@builder.io/qwik";
export const App_component_useStyles = 'hola';

/*
{
  "origin": "test.tsx",
  "name": "App_component_useStyles",
  "entry": null,
  "canonicalFilename": "h_test_app_component_usestyles",
  "extension": "js",
  "parent": "App_component",
  "ctxKind": "function",
  "ctxName": "useStyles$",
  "captures": false
}
*/
============================= h_test_app_component2.js (ENTRY POINT)==

import * as qwik from "@builder.io/qwik";
import { jsx as _jsx } from "@builder.io/qwik/jsx-runtime";
export const App_component2 = ()=>/*#__PURE__*/ _jsx("div", {})
;

/*
{
  "origin": "test.tsx",
  "name": "App_component2",
  "entry": null,
  "canonicalFilename": "h_test_app_component2",
  "extension": "js",
  "parent": "App_component",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false
}
*/
============================= h_test_app_component.js (ENTRY POINT)==

import * as qwik from "@builder.io/qwik";
import { useStylesQrl } from "@builder.io/qwik";
export const App_component = (props)=>{
    useStylesQrl(qwik.qrl(()=>import("./h_test_app_component_usestyles.js")
    , "App_component_useStyles"));
    return qwik.qrl(()=>import("./h_test_app_component2.js")
    , "App_component2");
};

/*
{
  "origin": "test.tsx",
  "name": "App_component",
  "entry": null,
  "canonicalFilename": "h_test_app_component",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false
}
*/
== DIAGNOSTICS ==

[]
